src/content/docs/versions/http-api/0.5.x/outputs/hls.mdx
---
title: HLS
slug: http-api/0.5.x/http-api/outputs/hls
---

import { Badge } from '@astrojs/starlight/components';
import CollapsibleDetails from '@components/CollapsibleDetails.astro';

An output type that allows streaming video and audio from Smelter over HLS.

## Usage

To use HLS Output you need to register it first.

<CollapsibleDetails summaryTitle="Example request" open>
  ```http
  POST: /api/output/:output_id/register
  Content-Type: application/json

  {
    "type": "hls",
    "path": "./output.m3u8",
    "video": {
      "resolution": { "width": 1280, "height": 720 },
      "encoder": { "type": "ffmpeg_h264" },
      "initial": {
        "root": {
          "type": "view"
        }
      }
    },
    "audio": {
      "encoder": { "type": "aac" },
      "channels": "stereo",
      "initial": {
        "inputs": [{ "input_id": "input_1", "volume": 1 }]
      }
    }
  }
  ```
</CollapsibleDetails>

See [HTTP Routes](/http-api/0.5.x/routes#outputs-configuration) documentation to learn more about managing outputs.

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type HlsOutput = {
    type: "hls";
    path: string;
    max_playlist_size?: number;
    video?: VideoOptions;
    audio?: AudioOptions;
  }
  ```
</CollapsibleDetails>

## Properties

### path

Path to the output HLS playlist file.

* **Type**: `string`

***

### max\_playlist\_size

Number of segments kept in the playlist. When the limit is reached the oldest segment is removed.
If not specified, no segments will removed.

* **Type**: `number`

***

### video

Video track configuration.

* **Type**: [`VideoOptions`](#videooptions)

***

### audio

Audio track configuration.

* **Type**: [`AudioOptions`](#audiooptions)

## VideoOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoOptions = {
    resolution: {
      width: u32;
      height: u32;
    };
    send_eos_when?: OutputEndCondition;
    encoder: VideoEncoderOptions;
    initial: { root: Component; };
  }
  ```
</CollapsibleDetails>

### Properties

#### resolution

Output resolution in pixels.

* **Type**: `{ width: u32; height: u32; }`

***

#### send\_eos\_when

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](#outputendcondition)

***

#### encoder

Video encoder options.

* **Type**: [`VideoEncoderOptions`](#videoencoderoptions)

***

#### initial

Root of a component tree/scene that should be rendered for the output. Use [`update_output`](/http-api/0.5.x/routes#update-output) request to update this value after registration.

* **Type**: `{ root: Component; }`

## VideoEncoderOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoEncoderOptions =
    | {
        type: "ffmpeg_h264";
        preset?:
          | "ultrafast"
          | "superfast"
          | "veryfast"
          | "faster"
          | "fast"
          | "medium"
          | "slow"
          | "slower"
          | "veryslow"
          | "placebo";
        pixel_format?: "yuv420p" | "yuv422p" | "yuv444p";
        ffmpeg_options?: Map<string, string>;
      }
    | {
        type: "vulkan_h264";
        bitrate: { average_bitrate: number; max_bitrate: number; } | number;
      };
  ```
</CollapsibleDetails>

### Properties (type: "ffmpeg\_h264")

#### preset

Video output encoder preset. Visit <a href="https://trac.ffmpeg.org/wiki/Encode/H.264#Preset" target="_blank">FFmpeg docs</a> to learn more.

* **Type**: `"ultrafast" | "superfast" | "veryfast" | "faster" | "fast" | "medium" | "slow" | "slower" | "veryslow" | "placebo"`
* **Default value**: `fast`
* **Supported values**:
  * `ultrafast`
  * `superfast`
  * `veryfast`
  * `faster`
  * `fast`
  * `medium`
  * `slow`
  * `slower`
  * `veryslow`
  * `placebo`

***

#### pixel\_format

Encoder pixel format

* **Type**: `"yuv420p" | "yuv422p" | "yuv444p"`
* **Default value**: `yuv420p`
* **Supported values**:
  * `yuv420p`
  * `yuv422p`
  * `yuv444p`

***

#### ffmpeg\_options

Raw FFmpeg encoder options. Visit <a href="https://ffmpeg.org/ffmpeg-codecs.html" target="_blank">FFmpeg docs</a> to learn more.

* **Type**: `Map<string, string>`

### Properties (type: “vulkan\_h264”) <Badge text="Required feature: vk-video" variant="note" />

Hardware encoder. Requires GPU that supports Vulkan Video encoding.

#### bitrate

Encoding bitrate. If not provided, bitrate is calculated based on resolution and framerate. For example at 1080p 30 FPS the average bitrate is 5000 kbit/s and max bitrate is 6250 kbit/s.

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VulkanH264EncoderBitrate = { average_bitrate: number; max_bitrate: number; } | number;
  ```
</CollapsibleDetails>

#### Properties

##### average\_bitrate

Average bitrate measured in bits/second. Encoder will try to keep the bitrate around the provided average, but may temporarily increase it to the provided max bitrate.

***

##### max\_bitrate

Max bitrate measured in bits/second.

## AudioOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type AudioOptions = {
    mixing_strategy?: "sum_clip" | "sum_scale";
    send_eos_when?: OutputEndCondition;
    encoder: AudioEncoderOptions;
    channels?: "mono" | "stereo";
    initial: { inputs: InputAudio[]; };
  }
  ```
</CollapsibleDetails>

### Properties

#### mixing\_strategy

Specifies how audio should be mixed.

* **Type**: `"sum_clip" | "sum_scale"`
* **Default value**: `"sum_clip"`
* **Supported values**:
  * `sum_clip` - First, the input samples are summed. If the result exceeds the i16 PCM range, it is clipped.
  * `sum_scale` - First, the input samples are summed. If the result exceeds the i16 PCM range, the summed samples are scaled down by a factor to fit within the range.

***

#### send\_eos\_when

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](#outputendcondition)

***

#### encoder

Audio encoder options.

* **Type**: [`AudioEncoderOptions`](#audioencoderoptions)

#### channels

Channels configuration

* **Type**: `"mono" | "stereo"`
* **Default value**: `"stereo"`
* **Supported values**:
  * `mono` - Mono audio (single channel).
  * `stereo` - Stereo audio (two channels).

#### initial

Initial audio mixer configuration for output.

* **Type**: `{ inputs: InputAudio[]; }`

## AudioEncoderOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type AudioEncoderOptions = {
    type: "aac";
    sample_rate?: u32;
  }
  ```
</CollapsibleDetails>

### Properties(type: "aac")

#### sample\_rate

Sample rate.

* **Type**: `u32`
* **Default value**: `44100`
* **Supported values**: `8000`, `16000`, `24000`, `44100`, `48000`

## InputAudio

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type InputAudio = {
    input_id: string;
    volume?: f32;
  }
  ```
</CollapsibleDetails>

### Properties

#### input\_id

ID of an input. It identifies a stream registered using a [register input](/http-api/0.5.x/routes#register-input) method.

* **Type**: `string`

#### volume

Input volume in range `[0, 2]`

* **Type**: `f32`
* **Default value**: `1.0`
* **Supported values**: `[0, 2]`

## OutputEndCondition

This type defines when end of an input stream should trigger end of the output stream. Only one of those fields can be set at the time.
Unless specified otherwise the input stream is considered finished/ended when:

* TCP connection was dropped/closed.
* RTCP Goodbye packet (`BYE`) was received.
* Mp4 track has ended.
* Input was unregistered already (or never registered).

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type OutputEndCondition = {
    any_of?: string[];
    all_of?: string[];
    any_input?: bool;
    all_inputs?: bool;
  }
  ```
</CollapsibleDetails>

### Properties

#### any\_of

List of the input streams. The output stream will terminate if any stream in the list finishes.

* **Type**: `string[]`

***

#### all\_of

List of the input streams. The output stream will terminate when all streams in the list finish.

* **Type**: `string[]`

***

#### any\_input

Terminate the output stream if any of the input streams end, including streams added after the output was registered. Notably, the output stream will not terminate if no inputs were ever connected.

* **Type**: `bool`

***

#### all\_inputs

Terminate the output stream only when all input streams have finished. Notably, the output stream will terminate if no inputs were ever connected.

* **Type**: `bool`
